--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="">Home</a></li>
-            <li><a href="index.php?samplepage=profile.php">Our Company</a></li>
+            <li><a href="">Our Company</a></li>
             <li><a href="">Our Services</a></li>
             <li><a href="">Projects</a></li>
           
