--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="container">
       <div class="row">
         <h3 class="center  grey-text text-darken-3">Our Company</h3>
-        <div class="col m12 light">
+        <div class="profile col m12 light">
           <p>Sumitomo Mitsui Construction Co., Ltd. is one of the largest construction company in Japan. Its expertise expands throughout the globe including the Philippines in year 1995. With excellence on civil and building works utilizing its latest technologies, SMCC Philippines, Inc. takes pride in turning the greatest ideas to possibilities</p>
           <a href="" class="read red-text text-darken-3"><h6>Read More</h6></a>
           </div>
